# mci

./: .gitignore  Cargo.toml  README.md  setup_maps.ps1
.cargo/: config.toml
.fleet/: run.json
crates/jdk-sys/: Cargo.toml  build.rs
crates/jni/: Cargo.toml
crates/jni-proc/: Cargo.toml
crates/jni-proc/src/: lib.rs
crates/jni/src/: class.rs  env.rs  jarray.rs  jstring.rs  jvalue.rs  lib.rs  object.rs
crates/map-gen/: Cargo.toml
crates/map-gen/src/: generator.rs  lib.rs  yarn.rs
crates/map-gen/src/tiny/: map.rs
crates/map-gen/src/yarn/: gen.rs  map.rs  mod.rs
crates/mc-mappings/: Cargo.toml  build.rs
crates/mc-mappings/src/: lib.rs  m_mc.rs
jdk-sys/: binds.rs  build.rs
jni/src/: class.rs  env.rs  field.rs  jarray.rs  jvalue.rs  lib.rs  macros.rs  object.rs
mc-mappings/: Cargo.toml  build.rs
mc-mappings/map-utils/: Cargo.toml
mc-mappings/map-utils/src/: lib.rs  type_sig.rs
mc-mappings/map-utils/src/maps/: mod.rs  tiny.rs  yarn.rs
mc-mappings/src/: lib.rs  main.rs  maps.rs
src/: lib.rs
src/mci/: mod.rs
