[package]
name = "mci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[workspace]
members = ["./crates/*"]
[dependencies]
jdk-sys = {path = "./crates/jdk-sys"}
mc-mappings = {path = "./crates/mc-mappings"}
jni = {path = "./crates/jni"}
[target.'cfg(any(target_os="macos",target_os="linux"))'.dependencies]
ctor = "*"
[target.'cfg(windows)'.dependencies]
toy-arms = "0.9.4"
windows = "0.39.0"
