[package]
name = "mc-mappings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
map-utils = {path="./map-utils"}
[dependencies]
jni ={path="../jni"}
map-utils = {path="./map-utils"}