[package]
name = "mc-mappings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
reqwest = { version = "0.11.14",features=["blocking"] }
map-gen = {path = "../map-gen"}
rust_minify = {git = "https://github.com/to-omer/rust_minify.git"}
[dependencies]
jni ={path="../jni"}
